[tool.poetry]
name = "abnb-server"
version = "0.1.0"
description = "django app for abnb clone"
authors = ["ffenland <ffenland@gmail.com>"]
readme = "README.md"
packages = [{include = "abnb_server"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.0.33"
mysqlclient = "^2.1.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
