[tool.poetry]
name = "abnb-server"
version = "0.1.0"
description = "django app for abnb clone"
authors = ["ffenland <ffenland@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.0.33"
mysqlclient = "^2.1.1"
djangorestframework = "^3.14.0"
pyjwt = "^2.7.0"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
